@@ -1,0 +1,71 @@
+package com.creditsaison.loansystem.dagger.modules;
+
+import android.content.Context;
+
+import com.creditsaison.loansystem.dagger.interfaces.LoanSystemApi;
+
+import java.io.File;
+import java.io.IOException;
+
+import dagger.Module;
+import dagger.Provides;
+import okhttp3.Cache;
+import okhttp3.Interceptor;
+import okhttp3.OkHttpClient;
+import okhttp3.Request;
+import okhttp3.Response;
+import okhttp3.logging.HttpLoggingInterceptor;
+import retrofit2.Retrofit;
+import timber.log.Timber;
+
+@Module(includes = ContextModule.class)
+public class OkHttpClientModule {
+
+    @Provides
+    public OkHttpClient okHttpClient(Cache cache, HttpLoggingInterceptor httpLoggingInterceptor, Interceptor commonHeaderInterceptor) {
+        return new OkHttpClient()
+                .newBuilder()
+                .cache(cache)
+                .addInterceptor(httpLoggingInterceptor)
+                .addInterceptor(commonHeaderInterceptor)
+                .build();
+    }
+
+    @Provides
+    public Cache cache(File cacheFile) {
+        return new Cache(cacheFile, 10 * 1000 * 1000); //10 MB
+    }
+
+    @Provides
+    public File file(Context context) {
+        File file = new File(context.getCacheDir(), "HttpCache");
+        file.mkdirs();
+        return file;
+    }
+
+    @Provides
+    public HttpLoggingInterceptor httpLoggingInterceptor() {
+        HttpLoggingInterceptor httpLoggingInterceptor = new HttpLoggingInterceptor(new HttpLoggingInterceptor.Logger() {
+            @Override
+            public void log(String message) {
+                Timber.d(message);
+            }
+        });
+        httpLoggingInterceptor.setLevel(HttpLoggingInterceptor.Level.BODY);
+        return httpLoggingInterceptor;
+    }
+
+    @Provides
+    public Interceptor requestInteceptor() {
+        return chain -> {
+            Request original = chain.request();
+
+            Request request = original.newBuilder()
+                    .header("Fineract-Platform-TenantId", "default")
+                    .method(original.method(), original.body())
+                    .build();
+
+            return chain.proceed(request);
+        };
+    }
+}
