@@ -1,0 +1,11 @@
+package com.creditsaison.loansystem.dagger.scopes;
+
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+
+import javax.inject.Scope;
+
+@Scope
+@Retention(RetentionPolicy.CLASS)
+public @interface LoanSystemApplicationScope {
+}
