@@ -1,0 +1,8 @@
+package com.creditsaison.loansystem.utils;
+
+public class Constants {
+
+    private static final String HOST_ADDRESS = "demo.openmf.org";
+
+    public static final String SERVER_HOST_ADDRESS = "https://" + HOST_ADDRESS + "/fineract-provider/api/v1/";
+}
