@@ -1,0 +1,10 @@
+package com.creditsaison.loansystem.utils;
+
+import android.content.SharedPreferences;
+
+public class SharedPrefManager {
+    private SharedPreferences sharedPreferences;
+    public SharedPrefManager(SharedPreferences sharedPreferences) {
+        this.sharedPreferences = sharedPreferences;
+    }
+}
