@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/username"
                 android:inputType="text"
-                android:text="@={viewModel.user.username}"
+                android:text="@={viewModel.credentials.username}"
                 android:textSize="24sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                android:text="@={viewModel.user.password}"
+                android:text="@={viewModel.credentials.password}"
                 android:textSize="24sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
